# linux

./: .gitignore  mkdirbase.sh
3-11shell脚本相关/study/day0311-c/src/: hello.c
3-11shell脚本相关/study/day0311-cPlus/sources/: Person.cpp
3-11shell脚本相关/test/day0311-c-modified/: install.sh
3-11shell脚本相关/test/day0311-c-modified/src/: hello.c  (+1 more)
3-12cio/day0312/: 1.txt  _02string.c  _03stdlib.c  _05fileio_v1  _05fileio_v1.c  _07fileio-v3  _09stdio.c  _10error
3-12cio/test/src/: _02string.c  _03stdlib.c  _04signal.c  _08fileio-v4.c  _09stdio.c  _10error.c
AdvertisingPlayer/3rd-lib/port/: elog_port.c
AdvertisingPlayer/common/config/: config.ini  routerConfig.ini
AdvertisingPlayer/common/include/: configinfo.h  data.h  log.h  mqttclient.h  msgQueue.h  tool.h
AdvertisingPlayer/common/src/: configinfo.c  log.c  mqttclient.c  msgQueue.c  tool.c
AdvertisingPlayer/configprocess/: CMakeLists.txt
AdvertisingPlayer/configprocess/html/: form_response.html  index.html
AdvertisingPlayer/configprocess/include/: configprocess.h
AdvertisingPlayer/configprocess/src/: configprocess.c  main.c
AdvertisingPlayer/mainprocess/: CMakeLists.txt
AdvertisingPlayer/mainprocess/include/: requestMethod.h  sendconfig.h
AdvertisingPlayer/mainprocess/src/: main.c  requestMethod.c  sendconfig.c
AdvertisingPlayer/test/mongooseTest/: index.html  makefile  momgoosetest  momgoosetest.c  mongoosetest
HttpServer/: HttpServer.cpp  WebServer.cpp  WebServer.h  网络编程-项目实战.md  网络编程项目.xmind
Httpserver/html/: index.html
Httpserver/include/: ApiHandler.h  BaseHandler.hpp  FileUtil.hpp  HandlerFactory.h  HtmlHandler.h  HttpParser.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpSession.h  JsonUtil.hpp  Router.h  WebServer.h  common.h
Httpserver/src/: ApiHandler.cpp  HandlerFactory.cpp  HtmlHandler.cpp  HttpSession.cpp  Router.cpp  WebServer.cpp  main.cpp  makefile  server
IPC/msg_queue/: makefile  msgQueue.h  processA  processA.c  processB  processB.c
IPC/pipe/NonPipe/: nonPipe.c
IPC/pipe/PipeFile/: makefile  pipeFile.h  processA  processA.c  processB  processB.c
IPC/semaphore_sysv/: a.txt  makefile  sem_mutex_demo  sem_mutex_demo.c
IPC/shared_memory/: processA  processA.c  processB  processB.c  shareMemory.h
Mqtt/: makefile  mqttText  mqttText.c
Mutux/rwLock/: makefile  rwlock  rwlock.c
Mutux/semPOSIX/: makefile  nameSem  nameSem.c  nonSem  nonSem.c
Mutux/threadPool/: main.cpp  makefile  threadPool.hpp
StaticAndDynamicLibs/day0316/libcurl-test/: CMakeLIsts.txt
StaticAndDynamicLibs/day0316/self_lib_cmake/uselibpro/: CMakeLists.txt
StaticAndDynamicLibs/day0316/self_lib_cmake_defaultpath/: install.sh
StaticAndDynamicLibs/day0316/self_lib_cmake_defaultpath/uselibpro/: CMakeLists.txt
StaticAndDynamicLibs/test/DynamicLib_cmake/: CMakeLists.txt  run_test.sh  test_mul  test_mul.c  uninstall.sh
StaticAndDynamicLibs/test/DynamicLib_cmake/include/: mul.h
StaticAndDynamicLibs/test/DynamicLib_shell/: DynamicLibrary.sh  run_test.sh  test_add  test_add.c
StaticAndDynamicLibs/test/StaticLib_cmake/: CMakeLists.txt  run_test.sh  test_sub_div  test_sub_div.c
StaticAndDynamicLibs/test/StaticLib_cmake/include/: div.h  sub.h
StaticAndDynamicLibs/test/StaticLib_cmake/src/: divide.c
StaticAndDynamicLibs/test/StaticLib_shell/: StaticLibrary.sh  run_test.sh  test_sub  test_sub.c
boost/: CMakeLists.txt  README.md
boost/include/: common.hpp
boost/src/: CMakeLists.txt
boost/src/async/: CMakeCache.txt  CMakeLists.txt  Makefile  client.cpp  server.cpp  server_improved.cpp
boost/src/protocols/: CMakeLists.txt  sticky_delimiter.cpp  sticky_fixed_length.cpp
boost/src/sync/: CMakeLists.txt  client.cpp  client_mt.cpp  server_mt.cpp  server_single.cpp
cio0312/day0312/: _01stdbool.c  _04signal.c  _06fileio-v2  _06fileio-v2.c  _07fileio-v3.c  _08fileio-v4  _08fileio-v4.c  _09stdio  _10error.c  test.txt
cio0312/test/: build_run.sh  linux c-标准库-总结.xmind
cio0312/test/src/: _01stdbool.c  _05fileio_v1.c  _06fileio-v2.c  _07fileio-v3.c
glib/: gilbtest.c  glibbtest  makefile
makeCmake0313/: main  main.c
makeCmake0313/day0313/cmakePro/cmake_pro3/: CMakeLists.txt
makeCmake0313/day0313/makeProject/: Makefile  Makefile_v3
makeCmake0313/day0313_new/cmake_project/pro2/: CMakeLists.txt
makeCmake0313/day0313_new/make_project/: Makefile
makecmake/: CMakeLists.txt
makecmake/day0313/cmakePro/cmake_pro4/pro2/: CMakeLists.txt
makecmake/day0313/cmakePro/cmake_pro4/pro2/src/: main.c
makecmake/day0313/makeProject/: Makefile_hello  Makefile_v1  Makefile_v2
makecmake/day0313_new/: 项目构建工具.xmind
makecmake/day0313_new/cmake_project/: CMakeLists.txt
makecmake/day0313_new/cmake_project/pro1/: CMakeLists.txt
makecmake/day0313_new/cmake_project/pro1/src/: main.c
makecmake/day0313_new/cmake_project/pro2/src/: main.c
shell/study/day0311/: _03string.sh  _04func_statement.sh  _05func_statement-test.sh  _07flowcontrol-for.sh
shell/test/day0311/: func_04.sh  function_07.sh  string_03.sh  variable_02.sh
shell脚本相关0311/study/day0311/: _02variable.sh
shell脚本相关0311/test/day0311/: shell-总结.xmind
shell脚本相关0311/test/day0311-cPlus-modified/: install.sh
study/day0311/: _01hello.sh  _06flowcontrol-if.sh  _08array.sh  _09function.sh
study/day0311-c/: install.sh
study/day0311-c/inc/: hello.h
study/day0311-c/src/: main.c
study/day0311-cPlus/: install.sh
study/day0311-cPlus/sources/: main.cpp
tcp/: .gitignore
tcp/epoll/: CMakeLists.txt
tcp/epoll/src/: EpollService.c  socket.c
tcp/poll/: CMakeLists.txt
tcp/poll/include/: Socket.h
tcp/poll/src/: PollService.c
tcp/select/: CMakeLists.txt
tcp/select/include/: Socket.h
tcp/select/src/: SlectService.c  client.c  socket.c
test/: arr_06.sh  flowcontrol_05.sh  hello_01.sh
udp/: CMakeLists.txt  network_io_mindmap.md  sw.py
udp/include/: UdpService.hpp  client.hpp  socket.hpp
udp/src/: UdpService.cpp  client.cpp
动静态库0316/day0316/libcurl-test/: install.sh  main.c
动静态库0316/day0316/self_lib_cmake/: CMakeLists.txt
动静态库0316/day0316/self_lib_cmake/libpro/: CMakeLists.txt
动静态库0316/doc/: linuxc-链接库.xmind  总结.txt  链接库-day1.md
(+39 files in other folders)
